<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:background="@color/blue"
        android:paddingStart="7sp"
        android:paddingBottom="10sp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="318dp"
        android:layout_height="31dp"
        android:layout_marginBottom="25sp"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="126dp"
        android:layout_height="76dp"
        android:layout_marginBottom="15sp"
        android:background="@color/green"
        android:padding="10sp"
        android:paddingBottom="10sp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="39sp"
        />

    <TextView
        android:id="@+id/min"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textAlignment="center"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/select_date"
        android:layout_width="251dp"
        android:layout_height="46dp"
        android:layout_margin="20sp"
        android:text="@string/button"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:layout_marginBottom="15sp"
        android:padding="8sp"
        android:text="@string/month"
        android:textAlignment="center"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginBottom="10sp"
        android:text="@string/selected_date"
        android:textAlignment="center"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_marginBottom="15sp"
        android:padding="5sp"
        android:text="@string/minute"
        android:textAlignment="center"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/view_minutes"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/banner"
        android:textAlignment="center"
        android:textSize="24sp"
        />

</LinearLayout>